Flattening purely in R to avoid Python script problems

--- a/workflow/envs/cleaning.yaml
+++ b/workflow/envs/cleaning.yaml
@@ -11,5 +11,7 @@ dependencies:
   - r-data.table
   - r-purrr
   - r-furrr
+  - bioconductor-biocinstaller
   - bioconductor-rtracklayer
   - bioconductor-genomicranges
+  - bioconductor-genomicfeatures
