Add option to do the full JM way

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -45,6 +45,12 @@ PE: True
 use_mix: False
 
 
+# If use_mix is True, do you also want to build an annotation
+# with just the long read first, to be used as a guide for
+# mixed assembly?
+LRonly_first: True
+
+
 # Which short reads should be paired with which long reads?
 # Key: short read ID
 # Value: long read ID
